package kurswork.dealership;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class DealershipApplication {
	public static void main(String[] args) {
		SpringApplication.run(DealershipApplication.class, args);
	}

}
